[package]
name = "pylevel"
version = "0.1.0"
authors = ["Hajime Nakagami <nakagami@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leveldb = "0.8"

[dependencies.pyo3]
version = "0.13"
features = ["extension-module"]

[lib]
name = "pylevel"
crate-type = ["cdylib"]
