[package]
name = "rslevel"
version = "0.1.0"
authors = ["Hajime Nakagami <nakagami@gmail.com>"]
edition = "2018"

license = "MIT"
description = "A python wrapper for Rust leveldb"
repository = "https://github.com/nakagami/pylevel"
readme = "README.md"
keywords = ["leveldb"]

[dependencies]
leveldb = "0.8"

[dependencies.pyo3]
version = "0.13"
features = ["extension-module"]

[lib]
name = "rslevel"
crate-type = ["cdylib"]
